--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chatgpt": "^5.2.5",
     "docx": "^8.5.0",
     "next": "14.1.4",
     "react": "^18",
